[package]
name = "http-healthnessprobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
serde = "1.0.188"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-sync"]

[dependencies.rocket]
version = "0.5.0"
features = ["json"]
